--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <br>
 <center>Dispositivos Moviles</center>
   <br>
-<center><img src="qr.gif"></center>
+<center><img src="qr.jpg"></center>
   <br>
   <br>
  
